[workspace]
members = [
  "crates/common",
  "crates/credential_store",
  "crates/market_data",
  "crates/strategy",
  "crates/risk",
  "crates/api",
  "crates/ledger",
  "crates/nats_adapter",
  "crates/quant",
  "crates/broker_engine",
  "crates/broker_execution_legacy",
  "crates/ib_adapter",
  "crates/ib_execution_legacy",
  "crates/tws_yield_curve",
  "services/backend_service",
  "services/tui_service",
  "services/tws_yield_curve_daemon",
  "crates/discount_bank_parser",
  "bin/cli",
]
default-members = [
  "crates/common",
  "crates/credential_store",
  "crates/market_data",
  "crates/strategy",
  "crates/risk",
  "crates/api",
  "crates/ledger",
  "crates/nats_adapter",
  "crates/quant",
  "crates/broker_engine",
  "crates/ib_adapter",
  "crates/tws_yield_curve",
  "services/backend_service",
  "services/tui_service",
  "services/tws_yield_curve_daemon",
  "crates/discount_bank_parser",
  "bin/cli",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
backoff = { version = "0.4" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["tokio-native-tls"] }
rand = { version = "0.8", features = ["std"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
toml = "0.8"
thiserror = "1"
derive_builder = "0.20"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "rustls", "query"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
regex = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
ibapi = "2.10"
jsonc-parser = { version = "0.29", features = ["serde"] }
financial_symbols = "1.0"
# trading-calendar removed: TUI market-hours indicator is now local-only
# cxx = "1.0" # Available for C++ ↔ Rust interop exploration (see task T-1773475473747582000)

# Smaller release artifacts in target/release (dev is already minimized in .cargo/config.toml).
# Omit thin/fat LTO here: it speeds links but can enlarge intermediate deps/ during builds.
[profile.release]
strip = "debuginfo"
