[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-mcp-server"
version = "0.1.0"
description = "MCP server for trading operations"
requires-python = ">=3.9"
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]
